--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -48,6 +48,12 @@
     }
   }
   --animate-rainbow: rainbow var(--speed, 2s) infinite linear;
+  --animate-shimmer: shimmer 3s infinite;
+  @keyframes shimmer {
+    100% {
+      transform: translateX(200%);
+    }
+  }
   --color-color-5: var(--color-5);
   --color-color-4: var(--color-4);
   --color-color-3: var(--color-3);
